--- a/package.json
+++ b/package.json
@@ -9,5 +9,20 @@
   "license": "MIT",
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rohitjangid666/graphql-crash-course-nodejs.git"
+  },
+  "author": "Rohit Jangid",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/rohitjangid666/graphql-crash-course-nodejs/issues"
+  },
+  "homepage": "https://github.com/hiteshchoudhary/apihub#readme",
+  "dependencies": {
+    "@apollo/server": "^4.9.5",
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1"
   }
 }
